crates/forge_markdown_stream/src/snapshots/forge_markdown_stream__table__tests__single_row_header_only.snap
---
source: src/table.rs
expression: "render(vec![vec![\"Only\", \"Headers\"],])"
---
  ┌──────┬─────────┐
  │ Only │ Headers │
  └──────┴─────────┘
