crates/forge_markdown_stream/src/snapshots/forge_markdown_stream__table__tests__special_characters.snap
---
source: src/table.rs
expression: "render(vec![vec![\"Symbol\", \"Meaning\"], vec![\"<\", \"less than\"],\nvec![\">\", \"greater than\"], vec![\"&\", \"ampersand\"], vec![\"\\\"\", \"quote\"],])"
---
  ┌────────┬──────────────┐
  │ Symbol │ Meaning      │
  ├────────┼──────────────┤
  │ <      │ less than    │
  ├────────┼──────────────┤
  │ >      │ greater than │
  ├────────┼──────────────┤
  │ &      │ ampersand    │
  ├────────┼──────────────┤
  │ "      │ quote        │
  └────────┴──────────────┘
