crates/forge_markdown_stream/src/snapshots/forge_markdown_stream__table__tests__strikethrough_in_table.snap
---
source: src/table.rs
expression: "render(vec![vec![\"Text\", \"Result\"], vec![\"~~strikethrough~~\", \"Should show\"],\nvec![\"Normal ~~strike~~ text\", \"Mixed\"],])"
---
  ┌────────────────────┬─────────────┐
  │ Text               │ Result      │
  ├────────────────────┼─────────────┤
  │ strikethrough      │ Should show │
  ├────────────────────┼─────────────┤
  │ Normal strike text │ Mixed       │
  └────────────────────┴─────────────┘
