crates/forge_markdown_stream/src/snapshots/forge_markdown_stream__table__tests__unicode_with_tags.snap
---
source: src/table.rs
expression: "render(vec![vec![\"言語\", \"説明\"], vec![\"**日本語**\", \"*Japanese*\"],\nvec![\"`中文`\", \"Chinese\"],])"
---
  ┌───────────────────┬─────────────────┐
  │ 言語              │ 説明            │
  ├───────────────────┼─────────────────┤
  │ <b>日本語</b>     │ <i>Japanese</i> │
  ├───────────────────┼─────────────────┤
  │ <code>中文</code> │ Chinese         │
  └───────────────────┴─────────────────┘
