crates/forge_markdown_stream/src/snapshots/forge_markdown_stream__table__tests__varying_column_widths.snap
---
source: src/table.rs
expression: "render(vec![vec![\"Short\", \"Much Longer Header\"], vec![\"a\", \"b\"],])"
---
  ┌───────┬────────────────────┐
  │ Short │ Much Longer Header │
  ├───────┼────────────────────┤
  │ a     │ b                  │
  └───────┴────────────────────┘
