crates/forge_markdown_stream/src/snapshots/forge_markdown_stream__table__tests__wide_table_many_columns.snap
---
source: src/table.rs
expression: "render(vec![vec![\"A\", \"B\", \"C\", \"D\", \"E\", \"F\"],\nvec![\"1\", \"2\", \"3\", \"4\", \"5\", \"6\"],])"
---
  ┌───┬───┬───┬───┬───┬───┐
  │ A │ B │ C │ D │ E │ F │
  ├───┼───┼───┼───┼───┼───┤
  │ 1 │ 2 │ 3 │ 4 │ 5 │ 6 │
  └───┴───┴───┴───┴───┴───┘
